Pequeños cambios implementados. Estilos en hover añadidos.

--- a/styles/main.css
+++ b/styles/main.css
@@ -6,6 +6,7 @@
   box-sizing: border-box;
   color: black;
   font-family: Helvetica;
+  letter-spacing: 0.04em;
 }
 
 body { background-color: #e5e5e5; }
@@ -26,7 +27,7 @@ ul { list-style: none; }
 
 .wrapper {
   max-width: 1366px;
-  width: 90%;
+  width: 100%;
   margin: auto;
   background-color: white;
 }
@@ -40,23 +41,32 @@ ul { list-style: none; }
 header div:first-child {
   justify-content: space-between;
   align-items: center;
-  padding: 2rem;
+  padding: 2rem 5rem;
 }
 
 header div:first-child img { max-width: 33px; }
 
 header div:first-child ul {
-  width: 50%;
-  justify-content: space-evenly;
+  width: 30%;
+  justify-content: space-between;
+}
+
+header div:first-child a { color: #c7c7c7; }
+
+header div:first-child a:hover {
+  color: #1F3F68;
+  border-bottom: .15rem solid #e5e5e5;
+  padding-bottom: .5rem;
 }
 
 header div:last-child {
-  padding: 3rem;
+  padding: 4rem;
   text-align: center;
-  background-color: #316099;
+  background: linear-gradient(211.87deg, #98D0FC 2.46%, #3481D7 93.24%);;
 }
 
 header div:last-child h1, header div:last-child p {
+  font-weight: normal;
   color: white;
   font-family: Arial;
 }
@@ -67,6 +77,11 @@ main {
   max-width: 940px;
   width: 70%;
   margin: 2rem auto;
+}
+
+.indicative-text {
+  color: #356ead;
+  opacity: .8;
 }
 
 .search {
@@ -86,22 +101,31 @@ main {
 
 /* .section-1 */
 
-.section-1 {
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
-}
+.section-1 { border-bottom: 1px solid rgba(0, 0, 0, .2); }
 
 .section-1 article:not(.main-article) figure {
   margin-bottom: 1rem;
   text-align: center;
 }
 
+.section-1 article:not(.main-article) figure img {
+  max-width: 250px;
+  width: 100%;
+}
+
 .section-1 .grid {
   grid-template-columns: repeat(3, auto);
+  column-gap: 1rem;
   margin: 2rem 0;
 }
 
 .section-1 > p {
   text-align: right;
+}
+
+.section-1 > p:last-child:hover {
+  opacity: 1;
+  cursor: pointer;
 }
 
 .main-article > div {
@@ -117,19 +141,48 @@ main {
 }
 
 .article-info {
+  flex-wrap: wrap;
   justify-content: space-between;
   margin-top: 1rem;
+  font-size: .75rem;
 }
 
-.article-info img { margin-right: 2rem; }
+.article-info p:first-child { font-weight: bold; }
+
+.article-info p:last-child {
+  padding-top: .5em;
+  color: #c7c7c7;
+}
+
+.article-info img {
+  margin-right: 2rem;
+  cursor: pointer;
+  transition: 1s transform;
+}
+
+.article-info img:hover {
+  transform: rotate(360deg);
+  transition: 1s transform;
+}
 
 /* .section-2 */
 
-.section-2 article > div { padding: 1rem; }
-
 .section-2 article { margin-bottom: 2rem; }
 
+.section-2 article > div {
+  width: 70%;
+  padding: 1rem;
+}
+
+.section-2 article figure { width: 30%; }
+
+.section-2 article figure img {
+  max-width: 300px;
+  width: 100%;
+}
+
 .section-2 > div:last-child { justify-content: space-between; }
+
 
 /* FOOTER */
 
@@ -138,6 +191,11 @@ footer {
   position: relative;
   background-color: #316099;
   border-top-right-radius: 200px;
+}
+
+footer img {
+  max-width: 16.5px;
+  margin-right: .5rem;
 }
 
 footer * { color: white; }
@@ -159,6 +217,7 @@ footer button {
   background-color: #5A98D0;
   padding: .75rem 3.5rem;
   border-radius: .5rem;
+  cursor: pointer;
 }
 
 footer > div:first-child div { width: 50%; }
@@ -169,6 +228,7 @@ footer .grid {
   line-height: 2rem;
 }
 
-footer .grid > p {
+footer .grid > p:last-child, footer .flex p {
+  font-size: .9rem;
   color: rgba(255, 255, 255, .4);
 }
