--- a/styles/main.css
+++ b/styles/main.css
@@ -51,12 +51,17 @@ header div:first-child ul {
   justify-content: space-between;
 }
 
-header div:first-child a { color: #c7c7c7; }
+header div:first-child a {
+  padding-bottom: .5rem;
+  color: #c7c7c7;
+  border-bottom: .15rem solid white;
+  transition: .5s color, .5s border;
+}
 
 header div:first-child a:hover {
   color: #1F3F68;
-  border-bottom: .15rem solid #e5e5e5;
-  padding-bottom: .5rem;
+  border-bottom-color: #e5e5e5;
+  transition: .5s color, .5s border;
 }
 
 header div:last-child {
@@ -75,7 +80,7 @@ header div:last-child h1, header div:last-child p {
 
 main {
   max-width: 940px;
-  width: 70%;
+  width: 95%;
   margin: 2rem auto;
 }
 
@@ -83,6 +88,8 @@ main {
   color: #356ead;
   opacity: .8;
 }
+
+/** .search --> Search bar styles **/
 
 .search {
   display: flex;
@@ -99,46 +106,13 @@ main {
   outline: none;
 }
 
-/* .section-1 */
-
-.section-1 { border-bottom: 1px solid rgba(0, 0, 0, .2); }
-
-.section-1 article:not(.main-article) figure {
-  margin-bottom: 1rem;
-  text-align: center;
+.search:focus-within {
+  background-color: #1d1d1d;
 }
 
-.section-1 article:not(.main-article) figure img {
-  max-width: 250px;
-  width: 100%;
-}
+.search input:focus { color: white; }
 
-.section-1 .grid {
-  grid-template-columns: repeat(3, auto);
-  column-gap: 1rem;
-  margin: 2rem 0;
-}
-
-.section-1 > p {
-  text-align: right;
-}
-
-.section-1 > p:last-child:hover {
-  opacity: 1;
-  cursor: pointer;
-}
-
-.main-article > div {
-  width: 50%;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-}
-
-.main-article figure {
-  width: 50%;
-  text-align: right;
-}
+/** .article-info --> Articles author, date and save and share buttons **/
 
 .article-info {
   flex-wrap: wrap;
@@ -165,18 +139,80 @@ main {
   transition: 1s transform;
 }
 
+/* .section-1 */
+
+.section-1 { border-bottom: 1px solid rgba(0, 0, 0, .2); }
+
+/** .main-article **/
+
+.main-article > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+
+.main-article > div > p { line-height: 1.75em; }
+
+.main-article figure {
+  flex-shrink: 0;
+  text-align: right;
+}
+
+.main-article figure img {
+  width: 100%;
+  max-width: 540px;
+}
+
+/** Rest of articles in section 1 **/
+
+.section-1 article:not(.main-article) { max-width: 300px; }
+
+.section-1 article:not(.main-article) figure {
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.section-1 article:not(.main-article) figure img {
+  max-width: 300px;
+  width: 100%;
+}
+
+.section-1 .grid {
+  grid-template-columns: repeat(3, auto);
+  column-gap: 1rem;
+  margin: 2rem 0;
+}
+
+.section-1 > p { text-align: right; }
+
+.section-1 > p:hover {
+  opacity: 1;
+  cursor: pointer;
+}
+
 /* .section-2 */
 
-.section-2 article { margin-bottom: 2rem; }
+.section-2 article {
+  margin-bottom: 2rem;
+  transition: .5s transform, .5s boxshadow;
+}
+
+.section-2 article:hover {
+  box-shadow: 2px 2px 2px 2px rgba(0, 0, 0, 0.02);
+  transform: translateY(-0.25rem);
+  transition: .5s transform, .5s boxshadow;
+}
 
 .section-2 article > div {
   width: 70%;
   padding: 1rem;
+  border: .05rem solid rgba(0, 0, 0, .05);
 }
 
 .section-2 article figure { width: 30%; }
 
 .section-2 article figure img {
+  display: block;
   max-width: 300px;
   width: 100%;
 }
@@ -187,7 +223,8 @@ main {
 /* FOOTER */
 
 footer {
-  width: 90%;
+  max-width: 1270px;
+  width: 97%;
   position: relative;
   background-color: #316099;
   border-top-right-radius: 200px;
@@ -214,10 +251,23 @@ footer > div:first-child div:last-child { text-align: center; }
 
 footer button {
   border: none;
-  background-color: #5A98D0;
+  background-color: #316099;
+  border: .15rem solid #5A98D0;
+  color: #5A98D0;
   padding: .75rem 3.5rem;
   border-radius: .5rem;
   cursor: pointer;
+  outline: none;
+
+}
+
+footer button:hover {
+  background-color: #5a98d0;
+  color: white;
+}
+
+footer button:active {
+  transform: scale(.95);
 }
 
 footer > div:first-child div { width: 50%; }
